[tool.poetry]
name = "fireblocks_api_client_python"
version = "1.0.0"
description = "Fireblocks API"
authors = ["support@fireblocks.com"]
license = "NoLicense"
readme = "README.md"
repository = "https://gitlab.com/fireblocks/shell/common/fireblocks-api-client-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Fireblocks API"]

[tool.poetry.dependencies]
python = "^3.9"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">= 1.10.5"
aenum = ">=3.1.11"
PyJWT =">= 2.3.0"
cryptography=">=2.7"
requests=">=2.22.0"
[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=4.4.6"
flake8 = ">=6.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
